# bettercamMOD

./: setup.py
BetterCam-main/: README.md  setup.cfg
BetterCam-main/benchmarks/: bettercam_capture.py  bettercam_max_fps.py  dxcam_capture.py  dxcam_max_fps.py
BetterCam-main/bettercam/: __init__.py  bettercam.py
BetterCam-main/bettercam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BetterCam-main/bettercam/core/: __init__.py  duplicator.py
BetterCam-main/bettercam/processor/: base.py  cupy_processor.py  numpy_processor.py  screen angle.py
BetterCam-main/bettercam/util/: io.py
BetterCam-main/examples/: capture_to_video.py  instant_replay.py
bettercam/: bettercam.py
bettercam/core/: output.py
bettercam/processor/: base.py  numpy_processor.py
