[metadata]
name = bettercam
version = 0.1.1

author = qfc9
description = A Python high-performance screenshot library for Windows use Desktop Duplication API 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RootKit-Org/BetterCam
project_urls =
    Source = https://github.com/RootKit-Org/BetterCam
    Tracker = https://github.com/RootKit-Org/BetterCam/issues
keywords = screen, screenshot, screencapture, screengrab, windows
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 8.1
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Capture
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    comtypes
[options.extras_require]
cv2 = opencv-python
[options.packages.find]
include = bettercam*